Fixed video bg on mobile

--- a/src/assets/scss/components/video-section.scss
+++ b/src/assets/scss/components/video-section.scss
@@ -263,8 +263,19 @@
 
 .bg-video {
   position: absolute;
-  right: 0;
+  top: 0;
   bottom: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.bg-video video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
   min-width: 100%;
   min-height: 100%;
+  width: auto;
+  height: auto;
+  transform: translate(-50%, -50%);
 }
