--- a/src/assets/scss/paper-kit/_examples.scss
+++ b/src/assets/scss/paper-kit/_examples.scss
@@ -263,3 +263,10 @@
         }
     }
 }
+
+@media (max-width: 900px) {
+    .page-header .motto {
+        width: 100%;
+        text-align: center;
+    }
+}
